# mcux-sdk-middleware-connectivity-framework

./: CMakeLists.txt  OtaUtils_h.patch  SW-Content-Register.txt  middleware_wireless_Sensors.cmake  middleware_wireless_framework_Common.cmake  middleware_wireless_framework_LPM.cmake  middleware_wireless_framework_LPM_cli.cmake  middleware_wireless_framework_LPM_systicks.cmake  middleware_wireless_framework_board_lp.cmake  middleware_wireless_framework_fsabstraction_littlefs.cmake  middleware_wireless_framework_function_lib.cmake  middleware_wireless_framework_fwk_debug.cmake  middleware_wireless_framework_lfs_config.cmake  middleware_wireless_framework_platform.cmake  middleware_wireless_framework_platform_ble.cmake  middleware_wireless_framework_platform_coex.cmake  middleware_wireless_framework_platform_common.cmake  middleware_wireless_framework_platform_lowpower.cmake  middleware_wireless_framework_platform_lowpower_timer.cmake  middleware_wireless_framework_platform_sensors.cmake  middleware_wireless_framework_sbtsnoop.cmake  middleware_wireless_framework_sbtsnoop_ethermind_port.cmake  set.middleware.wireless.framework.yml  set_middleware_wireless_framework.cmake
Common/: EmbeddedTypes.h  fwk_hal_macros.h
Common/devices/JN5180/iar/: JN5180_connectivity.icf
Common/devices/QN9090/gcc/: connectivity_QN9030.ld  connectivity_QN9030_opt_placement.ld  qn9030_map.ld
Common/devices/QN9090/iar/: connectivity_QN9030.icf
Common/devices/rw61x/mcux/: boot_hdr.ldt  end_text.ldt  main_data.ldt  symbols.ldt
Common/rtos/freertos/: heap_mem_manager.c
DBG/SWO/: fwk_debug_swo.c
FSAbstraction/: CMakeLists.txt  fwk_fs_abstraction.c  fwk_fs_abstraction.h
FSCI/Interface/: FsciInterface.h
FSCI/Source/: FsciCommands.c  FsciCommands.h  FsciCommunication.c  FsciCommunication.h  FsciLogging.c  FsciMain.c
FileCache/: fwk_file_cache.c
FileSystem/: CMakeLists.txt  fwk_filesystem.c  fwk_filesystem.h
Flash/Internal/: Flash_Adapter.c
FunctionLib/: FunctionLib.c  FunctionLib.h
HWParameter/: HWParameter.c  HWParameter.h
KeyStorage/: fwk_key_storage.c
Lists/: GenericList.c  GenericList.h
Logging/Interface/: dbg_logging.h
Logging/Source/: dbg_logging.c
LowPower/: PWR_cli.c
LowPower/Interface/k32w041adk6/: PWRLib.h  PWR_Configuration.h  PWR_Interface.h
LowPower/Interface/k32w041amdk6/: PWR_Interface.h
LowPower/Interface/k32w061dk6/: PWR_Configuration.h  PWR_Interface.h
LowPower/Source/k32w041adk6/: PWR.c  PWRLib.c
LowPower/Source/k32w041amdk6/: PWR.c  PWRLib.c
LowPower/Source/k32w061dk6/: PWR.c  PWRLib.c  PWR_setjmp_IAR.S
MWSCoexistence/Interface/: MWS.h
MWSCoexistence/Source/: MWS.c
MemManager/Interface/: MemManager.h  fsl_component_mem_manager.h
MemManager/Source/: MemManager.c  fsl_component_mem_manager_internal.h  fsl_component_mem_manager_light.c
Messaging/Interface/: Messaging.h  fsl_component_messaging.h
Messaging/Source/: Messaging.c  fsl_component_messaging.c
ModuleInfo/: ModuleInfo.c  ModuleInfo.h
NVM/: README.md
NVM/Interface/: NVM_Interface.h
NVM/Source/: NV_Flash.c  NV_FsciCommands.c  NV_FsciCommands.h
NVS/Interface/: nvs.h
NVS/Interface/port/: nvs_errno.h  nvs_port.h
NVS/Source/: crc.h  crc8.c  fwk_nvs_ExternalFlash.c  fwk_nvs_InternalFlash.c  fwk_nvs_flash.c  nvs.c  nvs_priv.h
OSAbstraction/Interface/: fsl_os_abstraction.h  fsl_os_abstraction_free_rtos.h
OSAbstraction/Source/: fsl_os_abstraction_bm.c  fsl_os_abstraction_free_rtos.c  fsl_os_abstraction_free_rtos.c.orig
OTW/: CMakeLists.txt
OTW/k32w0_transceiver/: fwk_otw.c
OtaSupport/Interface/: OtaSupport.h
OtaSupport/Source/: ExternalMflash.c  OtaExternalFlash.c  OtaInternalFlash.c  OtaPrivate.h  OtaSupport.c
PDM/: PDM.h  pdm_port.c
PDM/Include/: PDM.h
RNG/: RNG.c
RNG/Interface/: RNG_Interface.h
RNG/Source/: RNG.c
Reset/: Reset.c
SecLib/: AesManager.h  CryptoLibSW.h  SecLib.c  SecLib.h  SecLib_ecp256.h  SecLib_ecp256_sw.c  SecLib_mbedTLS.c  SecLib_sss.c
SerialManager/Source/: SerialManager.c  UART_Helper.h  UART_Serial_Adapter.c  UART_Serial_Adapter.h
Settings/Interface/: settings.h
Settings/Interface/port/: settings_port.h
TimersManager/Interface/: TimersManager.h
TimersManager/Source/: TMR_Adapter.c  TMR_Adapter.h  TimersManager.c
XCVR/DK6/: fsl_xcvr.c  radio.h
boards/: CMakeLists.txt
boards/k32w1_ncp_host/: board.h
boards/rdrw612bga/: board.c  board.h  board_lp.c  board_lp.h  hardware_init.c
boards/rt1060/: board_comp.c  board_comp.h
manifests/: middleware_nxp_conn_fwk_MIMXRT1062_manifest_v3_14.xml  middleware_nxp_conn_fwk_MIMXRT1176_manifest_v3_14.xml  middleware_nxp_conn_fwk_MIMXRT595S_manifest_v3_14.xml  middleware_nxp_conn_fwk_RW612_manifest_v3_10.xml  middleware_nxp_conn_fwk_RW612_manifest_v3_14.xml
platform/imx_rt/: CMakeLists.txt  fwk_platform_hdlc.c
platform/imx_rt/iw612/: fwk_platform_coex.c
platform/imx_rt/k32w0/: fwk_platform_coex.c
platform/rt/: fwk_platform_hdlc.c
platform/rt/k32w0/: fwk_platform_coex.c
platform/rt1060/: CMakeLists.txt  fwk_platform.c  fwk_platform.h  fwk_platform_ota.c  fwk_platform_ota.h
platform/rt1170/: CMakeLists.txt  fwk_platform.c
platform/rw61x/: fwk_platform_ble.c  fwk_platform_ble.h  fwk_platform_coex.c  fwk_platform_definitions.h  fwk_platform_hdlc.c  fwk_platform_lowpower.c  fwk_platform_sensors.c
platform/rw61x/configs/: fwk_config.h
